<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="no.tghack.gaiainvaders.JokeActivity" android:background="@color/colorPrimaryDark">

    <TextView
            android:id="@+id/answer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/joke_answer"
            android:visibility="invisible"
            android:textSize="24sp"
            android:textColor="@color/colorLight"
            android:layout_marginTop="105dp" android:layout_marginBottom="106dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/btn_get_answer"
            app:layout_constraintTop_toTopOf="@+id/question_text" app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:id="@+id/question_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intent_joke"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="27dp" android:layout_marginTop="156dp" android:layout_marginStart="27dp"/>
    <Button
            android:id="@+id/btn_get_answer"
            android:text="@string/get_answer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:background="@color/colorPink"
            android:textColor="@android:color/white"
            android:width="140dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="284dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
