<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@color/colorPrimaryDark"
                                                   android:id="@+id/linearLayout">

    <ImageView
            android:layout_width="333dp"
            android:contentDescription="@string/gaia_logo_description"
            android:layout_height="145dp"
            app:srcCompat="@drawable/gaia_logo_cropped"
            android:id="@+id/img_gaia_logo"
            android:layout_marginTop="100dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="29dp"
            android:layout_marginStart="29dp" android:layout_marginEnd="29dp" android:layout_marginRight="29dp"
            app:layout_constraintBottom_toTopOf="@+id/home_title"
            android:visibility="visible" app:layout_constraintVertical_bias="0.35000002"
            android:foregroundGravity="bottom|center"/>
    <TextView
            android:text="@string/home_title"
            android:layout_width="263dp"
            android:layout_height="83dp"
            android:id="@+id/home_title"
            app:fontFamily="@font/audiowide"
            android:textColor="@color/colorPrimary"
            android:textSize="36sp"
            android:lineSpacingExtra="12sp" android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:typeface="sans" android:textAllCaps="false"
            android:gravity="center|end|top"
            app:layout_constraintTop_toBottomOf="@+id/img_gaia_logo" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="60dp" android:layout_marginRight="60dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="59dp"
            android:layout_marginStart="59dp" app:layout_constraintHorizontal_bias="0.379"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="403dp"/>
    <Button
            android:text="@string/btn_play_game"
            android:layout_width="139dp"
            android:layout_height="68dp"
            android:id="@+id/btn_play_game" android:textColor="@color/colorPink"
            android:background="@color/colorLight" android:fadingEdge="horizontal|vertical"
            android:layout_marginBottom="142dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="84dp"
            android:layout_marginRight="84dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="83dp" android:layout_marginStart="83dp"
            app:layout_constraintTop_toBottomOf="@+id/home_title" android:textSize="18sp"
            app:layout_constraintHorizontal_bias="0.504" app:layout_constraintVertical_bias="0.532"/>
    <ImageView
            android:layout_width="45dp"
            android:layout_height="26dp" app:srcCompat="@drawable/invader2"
            android:id="@+id/img_invader1"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="38dp" android:layout_marginStart="38dp"
            app:layout_constraintEnd_toEndOf="@+id/home_title"
            app:layout_constraintHorizontal_bias="0.132"
            app:layout_constraintTop_toBottomOf="@+id/img_gaia_logo"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_play_game"
            app:layout_constraintVertical_bias="0.078"
            android:contentDescription="@string/invader_img_description" android:visibility="visible"/>
    <ImageView
            android:layout_width="51dp"
            android:layout_height="37dp" app:srcCompat="@drawable/invader1"
            android:id="@+id/img_invader2" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="39dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="55dp"
            android:layout_marginRight="55dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="174dp" android:layout_marginStart="174dp"
            app:layout_constraintBottom_toTopOf="@+id/img_gaia_logo" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0"
            android:contentDescription="@string/invader_img_description" android:visibility="visible"/>
</androidx.constraintlayout.widget.ConstraintLayout>
